[gd_scene load_steps=4 format=3 uid="uid://ip21lrtlkpt6"]

[ext_resource type="PackedScene" uid="uid://biy3s0e3yb44c" path="res://instances/utils/pnl_loading_simple.tscn" id="1_2iryx"]
[ext_resource type="Script" uid="uid://demqcirrvdbfk" path="res://instances/utils/texture_rect_load.gd" id="1_thkr1"]
[ext_resource type="Texture2D" uid="uid://btxmsw1wv5ai2" path="res://ui/icons/bootstrap_icons/arrow-repeat.svg" id="2_emqap"]

[node name="TextureRectLoad" type="TextureRect"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5
script = ExtResource("1_thkr1")
url = "https://static-cdn.jtvnw.net/jtv_user_pictures/cceb39b3-01c2-41b2-9309-a9c9697372cb-profile_image-300x300.png"
use_own_client = true

[node name="btn_reload" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="reload_ico" type="TextureRect" parent="btn_reload"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_emqap")
stretch_mode = 3

[node name="pnl_loading_simple" parent="." instance=ExtResource("1_2iryx")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="TextureHTTPRequest" type="HTTPRequest" parent="."]

[connection signal="mouse_entered" from="btn_reload" to="." method="_on_btn_reload_mouse_entered"]
[connection signal="mouse_exited" from="btn_reload" to="." method="_on_btn_reload_mouse_exited"]
